--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -1,13 +1,15 @@
 ---
-title: "Talk 2 on Relevant Topic in Your Field"
+title: "A Comprehensive Guide to Creating a Basic Reddit Bot"
 collection: talks
-type: "Talk"
-permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+type: "Tutorial"
+permalink: /articles/reddit-bot
+venue: "Analytics Vidhya"
+date: 2021-3-3
+location: "Medium"
 ---
 
-[More information here](http://example2.com)
-
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+This is a 3-part series on Reddit bot development.
+Read the articles here:
+- [Part 1](https://ashishkulkarnii.medium.com/15fb0e4cebcb)
+- [Part 2](https://ashishkulkarnii.medium.com/85de2fd300cd)
+- [Part 3](https://ashishkulkarnii.medium.com/351817cffae2)
